HTML + CSS (without quiz, css fixes to be made)

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 			<img src="ui/images/arrow-left.svg" />
 		</button>
 
-		<img class="logotype" src="ui/images/logo-white.png" alt="logo kmska" />
-		<img id="inf-icon" class="logotype" src="ui/images/inf-white.png" alt="info" />
+		<a href="index.html"><img class="logotype" src="ui/images/logo-white.png" alt="logo kmska" /></a>
+		<a href="instructions.html"><img id="inf-icon" class="logotype" src="ui/images/inf-white.png" alt="info" /></a>
 
 		<!--<button class="menu" onclick=""><img src="ui/images/menu.svg" /></button>-->
 	</header>
@@ -41,35 +41,37 @@
 			<h1><span class="redorange">Guided</span> tours</h1>
 			<div class="carousel">
 				<figure>
-					<img src="ui/images/Heilige_Barbara_van_Nicomedië,_Jan_van_Eyck,_1437,_Koninklijk_Museum_voor_Schone_Kunsten_Antwerpen,_410.jpg"
-						alt="">
+					<img src="ui/images/838_diptyque_de_melun_reconstitue.jpg" alt="">
 					<figcaption>
 						<h2>Common route</h2>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut magna lorem, luctus non feugiat tristique, viverra id ante. Sed nulla justo, malesuada eu nisl at, commodo tempor purus</p>
-						<button>Read more</button>
+						<p>Following this route, you will get led into the world of the rennaiscance, barok and surrealism. Including works of the artists Magritte, Jan van Eyck, Ensor, ...</p>
+						<button class="btn"><a href="routeinf.html">Read more</a></button>
 					</figcaption>
 				</figure>
 				<figure>
 					<img src="ui/images/Kmska_Titiaan_-_Jacopo_Pesaro_bisschop_van_Paphos_voorgesteld_door_paus_Alexander_VI_Borgia_aan_de_heilige_Petrus_-_28-02-2010_13-56-55.jpg"
 						alt="">
 					<figcaption>
-						<h2></h2>
-						<p></p>
+						<h2>Highlights</h2>
+						<p>Hightlights gives you the most impressive vision on which artist that made the art world. Including works of the artists Magritte, Jan van Eyck, Ensor, </p>
+						<button class="btn"><a href="routeinf.html">Read more</a></button>
 					</figcaption>
 				</figure>
 				<figure>
 					<img src="ui/images/De_verloren_zoon,_Peter_Paul_Rubens,_(1618),_Koninklijk_Museum_voor_Schone_Kunsten_Antwerpen,_781.jpg"
 						alt="">
 					<figcaption>
-						<h2></h2>
+						<h2>Barok route</h2>
 						<p></p>
+						<button class="btn">Read more</button>
 					</figcaption>
 				</figure>
 				<figure>
 					<img src="ui/images/zestien-september-rene-magritte-kmska.jpg" alt="">
 					<figcaption>
-						<h2></h2>
+						<h2>Renaissance route</h2>
 						<p></p>
+						<button class="btn"><a href="routeinf.html">Read more</a></button>
 					</figcaption>
 				</figure>
 				<figure>
@@ -78,6 +80,7 @@
 					<figcaption>
 						<h2></h2>
 						<p></p>
+						<button class="btn"><a href="routeinf.html">Read more</a></button>
 					</figcaption>
 				</figure>
 			</div>
@@ -87,14 +90,15 @@
 			<div id="generate-route-opt">
 				<div><img src="ui/images/individual.png">
 					<h2>Individual</h2>
-					<p>Try out the generator to create your personalized route</p>
+					<p>Try out the generator to create your personalized route.</p>
 				</div>
 				<div><img src="ui/images/qrcode.png">
 					<h2>Group</h2>
-					<p>Scan the QR code after taking de generator test</p>
+					<p>Scan the QR code after taking de generator test.</p>
 				</div>
 			</div>
 		</section>
+		<a href="feedback.html" class="btn">Give some feedback!</a>
 	</main>
 	</div>
 	<script src="cordova.js"></script>
