Front-end (Dynamic content + rest of pages HTML + CSS)

--- a/feedbackintro.html
+++ b/feedbackintro.html
@@ -32,23 +32,12 @@
         <!--<button class="menu" onclick=""><img src="ui/images/menu.svg" /></button>-->
     </header>
     <main>
-        <section id="feedback">
+        <section id="feedback-intro">
             <h1><span class="light-upper">Common</span><span class="bold-upper"> route</span></h1>
-
             <p class="redorange">You have finished this route!</p>
-            <div>
-                <p>Selections</p>
-                <img src="ui/images/rating-white.png" alt="">
-                <p>Generated</p>
-                <img src="ui/images/rating-white.png" alt="">
-                <p>Share this route</p>
-                <div>
-                    <img src="ui/images/fb-icon.png" alt="fb facebook icon">
-                    <img src="ui/images/insta-icon.png" alt="insta instagram icon">
-                    <img src="ui/images/linkedin-icon.png" alt="linkedin icon">
-                    <img src="ui/images/pinterest-icon.png" alt="pinterest icon">
-                    <img src="ui/images/twitter-icon.png" alt="twitter icon">
-                </div>
+            <a href="feedback.html">
+                <div class="btn">I want to give feedback!</div>
+            </a>
         </section>
     </main>
     </div>
