--- a/index.html
+++ b/index.html
@@ -38,57 +38,50 @@
 	</header>
 	<main>
 		<section id="guided-tours">
-			<h1><span class="redorange">Guided</span> tours</h1>
+			<h1><span class="light-upper">Existing</span><span class="bold-upper"> routes</span></h1>
 			<div class="carousel">
 				<figure>
-					<img src="ui/images/838_diptyque_de_melun_reconstitue.jpg" alt="">
+					<img src="ui/images/madonna.jpg" alt="">
 					<figcaption>
-						<h2>Common route</h2>
-						<p>Following this route, you will get led into the world of the rennaiscance, barok and surrealism. Including works of the artists Magritte, Jan van Eyck, Ensor, ...</p>
-						<button class="btn"><a href="routeinf.html">Read more</a></button>
+						<h2 id="Common route">Common route</h2>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil molestias impedit similique,
+							nisi assumenda mollitia! Eveniet commodi ipsam dolore eligendi eius amet id laboriosam ipsa
+							unde labore explicabo delectus illum facere quasi, consectetur molestiae consequatur illo!
+							Dolor enim iure deserunt dolorum possimus, praesentium iste molestiae consectetur est fuga
+							ipsam reiciendis.</p>
 					</figcaption>
+					<button class="btn"><a href="routeinf.html">Read more</a></button>
 				</figure>
 				<figure>
-					<img src="ui/images/Kmska_Titiaan_-_Jacopo_Pesaro_bisschop_van_Paphos_voorgesteld_door_paus_Alexander_VI_Borgia_aan_de_heilige_Petrus_-_28-02-2010_13-56-55.jpg"
-						alt="">
+					<img src="ui/images/madonna.jpg" alt="">
 					<figcaption>
-						<h2>Highlights</h2>
-						<p>Hightlights gives you the most impressive vision on which artist that made the art world. Including works of the artists Magritte, Jan van Eyck, Ensor, </p>
-						<button class="btn"><a href="routeinf.html">Read more</a></button>
+						<h2 id="Common route">Common route</h2>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil molestias impedit similique,
+							nisi assumenda mollitia! Eveniet commodi ipsam dolore eligendi eius amet id laboriosam ipsa
+							unde labore explicabo delectus illum facere quasi, consectetur molestiae consequatur illo!
+							Dolor enim iure deserunt dolorum possimus, praesentium iste molestiae consectetur est fuga
+							ipsam reiciendis.</p>
 					</figcaption>
+					<button class="btn"><a href="routeinf.html">Read more</a></button>
 				</figure>
 				<figure>
-					<img src="ui/images/De_verloren_zoon,_Peter_Paul_Rubens,_(1618),_Koninklijk_Museum_voor_Schone_Kunsten_Antwerpen,_781.jpg"
-						alt="">
+					<img src="ui/images/madonna.jpg" alt="">
 					<figcaption>
-						<h2>Barok route</h2>
-						<p></p>
-						<button class="btn">Read more</button>
+						<h2 id="Common route">Common route</h2>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil molestias impedit similique,
+							nisi assumenda mollitia! Eveniet commodi ipsam dolore eligendi eius amet id laboriosam ipsa
+							unde labore explicabo delectus illum facere quasi, consectetur molestiae consequatur illo!
+							Dolor enim iure deserunt dolorum possimus, praesentium iste molestiae consectetur est fuga
+							ipsam reiciendis.</p>
 					</figcaption>
-				</figure>
-				<figure>
-					<img src="ui/images/zestien-september-rene-magritte-kmska.jpg" alt="">
-					<figcaption>
-						<h2>Renaissance route</h2>
-						<p></p>
-						<button class="btn"><a href="routeinf.html">Read more</a></button>
-					</figcaption>
-				</figure>
-				<figure>
-					<img src="ui/images/Kmska_Jean_Auguste_Dominique_Ingres_(1780-1867)_-_Zelfportret_(1864)_-_28-02-2010_13-37-05.jpg"
-						alt="">
-					<figcaption>
-						<h2></h2>
-						<p></p>
-						<button class="btn"><a href="routeinf.html">Read more</a></button>
-					</figcaption>
+					<button class="btn"><a href="routeinf.html">Read more</a></button>
 				</figure>
 			</div>
 		</section>
 		<section id="generate-route">
-			<h1>Generate <span class="redorange">route</span></h1>
+			<h1><span class="light-upper">Generate new</span><span class="bold-upper"> route</span></h1>
 			<div id="generate-route-opt">
-				<div><img src="ui/images/individual.png">
+				<div><img src="ui/images/user.svg">
 					<h2>Individual</h2>
 					<p>Try out the generator to create your personalized route.</p>
 				</div>
@@ -98,12 +91,15 @@
 				</div>
 			</div>
 		</section>
-		<a href="feedback.html" class="btn">Give some feedback!</a>
+		<a href="feedbackintro.html" class="btn">Give some feedback!</a>
 	</main>
 	</div>
 	<script src="cordova.js"></script>
 	<script src="libs/evothings/evothings.js"></script>
 	<script src="libs/evothings/ui/ui.js"></script>
+	<script src="https://code.jquery.com/jquery-3.4.1.min.js"
+		integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+	<script src="js/script.js"></script>
 	<!-- TODO: Add libraries that you need -->
 
 </body>
