--- a/routegenerator.html
+++ b/routegenerator.html
@@ -37,23 +37,18 @@
 		<!--<button class="menu" onclick=""><img src="ui/images/menu.svg" /></button>-->
 	</header>
 	<main>
-		<h1><span class="light-upper">Common</span><span class="bold-upper"> route</span></h1>
-            <section id="goto">
-                <p>Go to building</p>
-                <p class="xl">1B</p>
-                <p>and room</p>
-                <p class="xl">BC5</p>
-			</section>
-			<section id="gotoinf">
-				<h2>Madonna omringd door serafijnen en cherubijnen</h2>
-				<h3>Jean Fouquet</h3>
-				<p>1454 - 1456</p>
-			</section>
+		<section id="generator-container">
+
+		</section>
+		<a href="feedback.html" class="btn">Give some feedback!</a>
 	</main>
 	</div>
 	<script src="cordova.js"></script>
 	<script src="libs/evothings/evothings.js"></script>
 	<script src="libs/evothings/ui/ui.js"></script>
+	<script src="https://code.jquery.com/jquery-3.4.1.min.js"
+		integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+	<script src="js/script.js"></script>
 	<!-- TODO: Add libraries that you need -->
 
 </body>
