--- a/routeinf.html
+++ b/routeinf.html
@@ -37,29 +37,45 @@
 		<!--<button class="menu" onclick=""><img src="ui/images/menu.svg" /></button>-->
 	</header>
 	<main>
-            <h1><span class="redorange">Common</span> route</h1>
-            <section id="route-inf">
-				<img src="ui/images/838_diptyque_de_melun_reconstitue.jpg" alt="">
-				<p>Following this route, you will get led into the world of the rennaiscance, barok and surrealism. Including works of the artists Magritte, Jan van Eyck, Ensor, ...</p>
-				<div>
-					<p>Rating:</p><img src="ui/images/rating-white.png">
-				</div>
-				<div><p>Duration:</p><p>2:45h</p></div>
-				<a href="routeinstructions.html"><div class="btn"><p>Select route</p></div></a>
-			</section>
-			<section id="route-gallery">
-				<img src="ui/images/Kmska_Jean_Auguste_Dominique_Ingres_(1780-1867)_-_Zelfportret_(1864)_-_28-02-2010_13-37-05.jpg" alt="">
-				<img src="ui/images/Kmska_Titiaan_-_Jacopo_Pesaro_bisschop_van_Paphos_voorgesteld_door_paus_Alexander_VI_Borgia_aan_de_heilige_Petrus_-_28-02-2010_13-56-55.jpg" alt="">
-				<img src="ui/images/zestien-september-rene-magritte-kmska.jpg" alt="">
-				<img src="ui/images/De_verloren_zoon,_Peter_Paul_Rubens,_(1618),_Koninklijk_Museum_voor_Schone_Kunsten_Antwerpen,_781.jpg" alt="">
-				<img src="ui/images/Heilige_Barbara_van_Nicomedië,_Jan_van_Eyck,_1437,_Koninklijk_Museum_voor_Schone_Kunsten_Antwerpen,_410.jpg" alt="">
-				<img src="ui/images/838_diptyque_de_melun_reconstitue.jpg" alt="">
-			</section>
+		<h1><span class="light-upper">Common</span><span class="bold-upper"> route</span></h1>
+		<section id="route-inf">
+			<img src="ui/images/madonna.jpg" alt="">
+                    <p>Test</p>
+                    <div>
+                        <div>
+                            <p>Rating:</p><img src="ui/images/rating-white.png">
+                        </div>
+                        <div>
+                            <p>Duration:</p>
+                            <p>2:45h</p>
+                        </div>
+                    </div>
+                    <a href="routeinstructions.html">
+                        <div class="btn">
+                            <p>Select route</p>
+                        </div>
+                    </a>
+		</section>
+		<section id="route-gallery">
+			<img src="ui/images/Kmska_Jean_Auguste_Dominique_Ingres_(1780-1867)_-_Zelfportret_(1864)_-_28-02-2010_13-37-05.jpg"
+				alt="">
+			<img src="ui/images/Kmska_Titiaan_-_Jacopo_Pesaro_bisschop_van_Paphos_voorgesteld_door_paus_Alexander_VI_Borgia_aan_de_heilige_Petrus_-_28-02-2010_13-56-55.jpg"
+				alt="">
+			<img src="ui/images/zestien-september-rene-magritte-kmska.jpg" alt="">
+			<img src="ui/images/De_verloren_zoon,_Peter_Paul_Rubens,_(1618),_Koninklijk_Museum_voor_Schone_Kunsten_Antwerpen,_781.jpg"
+				alt="">
+			<img src="ui/images/Heilige_Barbara_van_Nicomedië,_Jan_van_Eyck,_1437,_Koninklijk_Museum_voor_Schone_Kunsten_Antwerpen,_410.jpg"
+				alt="">
+			<img src="ui/images/838_diptyque_de_melun_reconstitue.jpg" alt="">
+		</section>
 	</main>
 	</div>
 	<script src="cordova.js"></script>
 	<script src="libs/evothings/evothings.js"></script>
 	<script src="libs/evothings/ui/ui.js"></script>
+	<script src="https://code.jquery.com/jquery-3.4.1.min.js"
+		integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+	<script src="js/script.js"></script>
 	<!-- TODO: Add libraries that you need -->
 
 </body>
