Feedback css in seperate file

--- a/feedbackintro.html
+++ b/feedbackintro.html
@@ -22,7 +22,7 @@
 
 </head>
 
-<body ontouchstart="" class="white-bg">
+<body ontouchstart="">
     <!-- ontouchstart="" enables low-delay CSS transitions. -->
     <img src="ui/images/Kmska_Jean_Auguste_Dominique_Ingres_(1780-1867)_-_Zelfportret_(1864)_-_28-02-2010_13-37-05.jpg" alt="" id="bg">
     <header>
