--- a/routeinf.html
+++ b/routeinf.html
@@ -40,7 +40,11 @@
 		<h1><span class="light-upper">Common</span><span class="bold-upper"> route</span></h1>
 		<section id="route-inf">
 			<img src="ui/images/madonna.jpg" alt="">
-                    <p>Test</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil molestias impedit similique,
+						nisi assumenda mollitia! Eveniet commodi ipsam dolore eligendi eius amet id laboriosam ipsa
+						unde labore explicabo delectus illum facere quasi, consectetur molestiae consequatur illo!
+						Dolor enim iure deserunt dolorum possimus, praesentium iste molestiae consectetur est fuga
+						ipsam reiciendis.</p>
                     <div>
                         <div>
                             <p>Rating:</p><img src="ui/images/rating-white.png">
