--- a/feedbackintro.html
+++ b/feedbackintro.html
@@ -33,10 +33,9 @@
     </header>
     <main>
         <section id="feedback-intro">
-            <h1><span class="light-upper">Common</span><span class="bold-upper"> route</span></h1>
-            <p class="redorange">You have finished this route!</p>
+            <p class="redorange">YOU HAVE FINISHED THIS ROUTE!</p>
             <a href="feedback.html">
-                <div class="btn">I want to give feedback!</div>
+                <button class="btn">I want to give feedback!</button>
             </a>
         </section>
     </main>
