--- a/share.html
+++ b/share.html
@@ -32,13 +32,18 @@
         <!--<button class="menu" onclick=""><img src="ui/images/menu.svg" /></button>-->
     </header>
     <main>
-        <section id="feedback">
+        <section id="share">
+            <p>THANK YOU FOR COMING</p>
+        
             <div>
-                <p>Selections</p>
-                <img src="ui/images/rating-white.png" alt="">
-                <p>Generated</p>
-                <img src="ui/images/rating-white.png" alt="">
-               
+                <p>Share this route</p>
+                <div>
+                    <img src="ui/images/fb-icon.png" alt="fb facebook icon">
+                    <img src="ui/images/insta-icon.png" alt="insta instagram icon">
+                    <img src="ui/images/linkedin-icon.png" alt="linkedin icon">
+                    <img src="ui/images/pinterest-icon.png" alt="pinterest icon">
+                    <img src="ui/images/twitter-icon.png" alt="twitter icon">
+                </div>
         </section>
     </main>
     </div>
