quiz & css detail

--- a/routeinf.html
+++ b/routeinf.html
@@ -47,19 +47,16 @@
 						ipsam reiciendis.</p>
                     <div>
                         <div class="route-inf-extra">
-                            <p>Rating</p><img src="ui/images/rating-white.png">
+                            <p>Rating</p><img src="ui/images/rating-red.png">
                         </div>
                         <div class="route-inf-extra">
                             <p>Duration</p>
-                            <p>2:45h</p>
+                            <p class="redorange"></p>2:45h</p>
                         </div>
 					</div>
 					<div>
-                    <a href="routeinstructions.html">
-                        <div class="btn">
-                            <p>Select route</p>
-                        </div>
-					</a>
+						<button class="btn"><a href="routeinstructions.html">Select route</a></button>
+						
 				</div>
 		</section>
 		<section id="route-gallery">
