--- a/index.html
+++ b/index.html
@@ -81,17 +81,16 @@
 		<section id="generate-route">
 			<h1><span class="light-upper">Generate new</span><span class="bold-upper"> route</span></h1>
 			<div id="generate-route-opt">
-				<div><img src="ui/images/user.svg">
+				<div><a href="generator.html"><img src="ui/images/user.svg">
 					<h2>Individual</h2>
 					<p>Try out the generator to create your personalized route.</p>
-				</div>
+				</a></div>
 				<div><img src="ui/images/qrcode.png">
 					<h2>Group</h2>
 					<p>Scan the QR code after taking de generator test.</p>
 				</div>
 			</div>
 		</section>
-		<a href="feedbackintro.html" class="btn">Give some feedback!</a>
 	</main>
 	</div>
 	<script src="cordova.js"></script>
