--- a/generator.html
+++ b/generator.html
@@ -40,14 +40,14 @@
 
 		<!--<button class="menu" onclick=""><img src="ui/images/menu.svg" /></button>-->
 	</header>
-    <h1>KMSKA Route Generator</h1>
     <div class="generator">
+        <h1><span class="light-upper">Route</span><span class="bold-upper"> generator</span></h1>
         <div class="question">
             <h2 id="question">Name the people in your group:</h2>
             <input type="text" placeholder="name" class="name"> <br>
-            <button id="addPerson">Add a person</button>
+            <button id="addPerson" class="btn">Add a person</button>
             <br>
-            <button id="next">I'm done!</button>
+            <button id="next" class="btn">I'm done!</button>
         </div>
     </div>
 </body>
