--- a/routeinf.html
+++ b/routeinf.html
@@ -51,7 +51,7 @@
                         </div>
                         <div class="route-inf-extra">
                             <p>Duration</p>
-                            <p class="redorange"></p>2:45h</p>
+                            <p class="redorange">2:45h</p>
                         </div>
 					</div>
 					<div>
