--- a/routeinstructions.html
+++ b/routeinstructions.html
@@ -37,7 +37,7 @@
 		<!--<button class="menu" onclick=""><img src="ui/images/menu.svg" /></button>-->
 	</header>
 	<main>
-		<h1><span class="light-upper">Common</span><span class="bold-upper"> route</span></h1>
+			<h1><span class="light-upper">Existing</span><span class="bold-upper"> routes</span></h1>
             <section id="goto">
                 <p>Go to building</p>
                 <p class="xl">1B</p>
