--- a/routeinstructions.html
+++ b/routeinstructions.html
@@ -37,18 +37,24 @@
 		<!--<button class="menu" onclick=""><img src="ui/images/menu.svg" /></button>-->
 	</header>
 	<main>
-			<h1><span class="light-upper">Existing</span><span class="bold-upper"> routes</span></h1>
-            <section id="goto">
+			<h1><span class="light-upper" id="klein">Existing</span>
+				<span class="bold-upper" id="groot"> routes</span>
+			</h1>
+            <section id="route-instructions">
+			<section id="goto">
                 <p>Go to building</p>
                 <p class="xl">1B</p>
                 <p>and room</p>
                 <p class="xl">BC5</p>
 			</section>
+			<img src="ui/images/madonna.jpg" alt="">
 			<section id="gotoinf">
 				<h2>Madonna omringd door serafijnen en cherubijnen</h2>
 				<h3>Jean Fouquet</h3>
 				<p>1454 - 1456</p>
 			</section>
+		</section>
+	</section>
 	</main>
 	</div>
 	<script src="cordova.js"></script>
