--- a/feedback.html
+++ b/feedback.html
@@ -37,8 +37,9 @@
                 <p>Selections</p>
                 <img src="ui/images/rating-white.png" alt="">
                 <p>Generated</p>
+            <a href="share.html">
                 <img src="ui/images/rating-white.png" alt="">
-               
+            </a>
         </section>
     </main>
     </div>
