--- a/index.html
+++ b/index.html
@@ -44,13 +44,19 @@
 					<img src="ui/images/madonna.jpg" alt="">
 					<figcaption>
 						<h2 id="Common route">Common route</h2>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil molestias impedit similique,
-							nisi assumenda mollitia! Eveniet commodi ipsam dolore eligendi eius amet id laboriosam ipsa
-							unde labore explicabo delectus illum facere quasi, consectetur molestiae consequatur illo!
-							Dolor enim iure deserunt dolorum possimus, praesentium iste molestiae consectetur est fuga
-							ipsam reiciendis.</p>
+						<p>Following this route, you will get led into the world of the rennaiscance, barok and surrealism.
+							 Including works of the artists Magritte, Jan van Eyck, Ensor and Van Gogh. </p>
 					</figcaption>
-					<button class="btn"><a href="routeinf.html">Read more</a></button>
+					<button class="btn readmore"><a href="routeinf.html">Read more ></a></button>
+				</figure>
+				<figure>
+					<img src="ui/images/madonna.jpg" alt="">
+					<figcaption>
+						<h2 id="Common route">Common route</h2>
+						<p>Hightlights gives you the most impressive vision on which artist that made the art world. 
+							Including works of the artists Magritte, Jan van Eyck, Ensor and many more! </p>
+					</figcaption>
+					<button class="btn readmore"><a href="routeinf.html">Read more ></a></button>
 				</figure>
 				<figure>
 					<img src="ui/images/madonna.jpg" alt="">
@@ -62,19 +68,7 @@
 							Dolor enim iure deserunt dolorum possimus, praesentium iste molestiae consectetur est fuga
 							ipsam reiciendis.</p>
 					</figcaption>
-					<button class="btn"><a href="routeinf.html">Read more</a></button>
-				</figure>
-				<figure>
-					<img src="ui/images/madonna.jpg" alt="">
-					<figcaption>
-						<h2 id="Common route">Common route</h2>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil molestias impedit similique,
-							nisi assumenda mollitia! Eveniet commodi ipsam dolore eligendi eius amet id laboriosam ipsa
-							unde labore explicabo delectus illum facere quasi, consectetur molestiae consequatur illo!
-							Dolor enim iure deserunt dolorum possimus, praesentium iste molestiae consectetur est fuga
-							ipsam reiciendis.</p>
-					</figcaption>
-					<button class="btn"><a href="routeinf.html">Read more</a></button>
+					<button class="btn readmore"><a href="routeinf.html">Read more ></a></button>
 				</figure>
 			</div>
 		</section>
@@ -93,7 +87,6 @@
 				</div>
 			</div>
 		</section>
-		<a href="feedbackintro.html" class="btn">Give some feedback!</a>
 	</main>
 	</div>
 	<script src="cordova.js"></script>
