--- a/routeinstructions.html
+++ b/routeinstructions.html
@@ -37,8 +37,8 @@
 		<!--<button class="menu" onclick=""><img src="ui/images/menu.svg" /></button>-->
 	</header>
 	<main>
-			<h1><span class="light-upper" id="klein">Existing</span>
-				<span class="bold-upper" id="groot"> routes</span>
+			<h1><span class="light-upper">Existing</span>
+				<span class="bold-upper"> routes</span>
 			</h1>
             <section id="route-instructions">
 			<section id="goto">
@@ -49,9 +49,11 @@
 			</section>
 			<img src="ui/images/madonna.jpg" alt="">
 			<section id="gotoinf">
+				<a href="feedbackintro.html">
 				<h2>Madonna omringd door serafijnen en cherubijnen</h2>
 				<h3>Jean Fouquet</h3>
 				<p>1454 - 1456</p>
+			</a>
 			</section>
 		</section>
 	</section>
