--- a/generator.html
+++ b/generator.html
@@ -26,10 +26,8 @@
     <title>KMSKA Route Generator</title>
 </head>
 
-<body ontouchstart="">
+<body ontouchstart="" class="white-bg">
 	<!-- ontouchstart="" enables low-delay CSS transitions. -->
-	<img src="ui/images/Kmska_Jean_Auguste_Dominique_Ingres_(1780-1867)_-_Zelfportret_(1864)_-_28-02-2010_13-37-05.jpg"
-		alt="" id="bg">
 	<header>
 		<button class="back" onclick="history.back()">
 			<img src="ui/images/arrow-left.svg" />
