Generator last changes css

--- a/generator.html
+++ b/generator.html
@@ -28,7 +28,7 @@
 
 <body ontouchstart="" class="white-bg">
 	<!-- ontouchstart="" enables low-delay CSS transitions. -->
-	<header>
+	<header class="black-bg">
 		<button class="back" onclick="history.back()">
 			<img src="ui/images/arrow-left.svg" />
 		</button>
