--- a/generator.html
+++ b/generator.html
@@ -46,7 +46,8 @@
             <button id="addPerson" class="btn">Add a person</button>
             <br>
             <button id="next" class="btn">I'm done!</button>
-        </div>
+		</div>
+		<img src="ui/images/Asset 1.svg" class="timeline">
     </div>
 </body>
 <script src="cordova.js"></script>
