Official timeline push

--- a/generator.html
+++ b/generator.html
@@ -47,8 +47,9 @@
             <br>
             <button id="next" class="btn">I'm done!</button>
 		</div>
-		<img src="ui/images/Asset 1.svg" class="timeline">
-    </div>
+	</div>
+	<footer>
+		<img src="ui/images/Asset 1.svg" class="timeline"></footer>
 </body>
 <script src="cordova.js"></script>
 <script src="libs/evothings/evothings.js"></script>
