--- a/routeinf.html
+++ b/routeinf.html
@@ -27,15 +27,14 @@
 	<img src="ui/images/Kmska_Jean_Auguste_Dominique_Ingres_(1780-1867)_-_Zelfportret_(1864)_-_28-02-2010_13-37-05.jpg"
 		alt="" id="bg">
 	<header>
-		<button class="back" onclick="history.back()">
-			<img src="ui/images/arrow-left.svg" />
-		</button>
-
 		<a href="index.html"><img class="logotype" src="ui/images/logo-white.png" alt="logo kmska" /></a>
 		<a href="instructions.html"><img id="inf-icon" class="logotype" src="ui/images/inf-white.png" alt="info" /></a>
 
 		<!--<button class="menu" onclick=""><img src="ui/images/menu.svg" /></button>-->
 	</header>
+	<button class="back" onclick="history.back()">
+		<img src="ui/images/back.png" /><p>Back</p>
+	</button>
 	<main>
 		<h1><span class="light-upper">Common</span><span class="bold-upper"> route</span></h1>
 		<section id="route-inf">
