--- a/routeinstructions.html
+++ b/routeinstructions.html
@@ -43,9 +43,9 @@
             <section id="route-instructions">
 			<section id="goto">
                 <p>Go to building</p>
-                <p class="xl">1B</p>
+                <p class="xl" id="roomnumber">1B</p>
                 <p>and room</p>
-                <p class="xl">BC5</p>
+                <p class="xl" id="paintingNumber">BC5</p>
 			</section>
 			<img src="ui/images/madonna.jpg" alt="">
 			<section id="gotoinf">
