--- a/feedback.html
+++ b/feedback.html
@@ -32,6 +32,9 @@
         <!--<button class="menu" onclick=""><img src="ui/images/menu.svg" /></button>-->
     </header>
     <main>
+        <button class="back" onclick="history.back()">
+			<img src="ui/images/back.png" /><p>Back</p>
+		</button>
         <section id="feedback">
             <div>
                 <p>Selections</p>
