--- a/generator.html
+++ b/generator.html
@@ -29,16 +29,15 @@
 <body ontouchstart="" class="white-bg">
 	<!-- ontouchstart="" enables low-delay CSS transitions. -->
 	<header class="black-bg">
-		<button class="back" onclick="history.back()">
-			<img src="ui/images/arrow-left.svg" />
-		</button>
-
 		<a href="index.html"><img class="logotype" src="ui/images/logo-white.png" alt="logo kmska" /></a>
 		<a href="instructions.html"><img id="inf-icon" class="logotype" src="ui/images/inf-white.png" alt="info" /></a>
 
 		<!--<button class="menu" onclick=""><img src="ui/images/menu.svg" /></button>-->
 	</header>
     <div class="generator">
+		<button class="back" onclick="history.back()">
+			<img src="ui/images/back.png" /><p>Back</p>
+		</button>
         <h1><span class="light-upper">Route</span><span class="bold-upper"> generator</span></h1>
         <div class="question">
             <h2 id="question">Name the people in your group:</h2>
