--- a/routeinstructions.html
+++ b/routeinstructions.html
@@ -27,9 +27,6 @@
 	<img src="ui/images/Kmska_Jean_Auguste_Dominique_Ingres_(1780-1867)_-_Zelfportret_(1864)_-_28-02-2010_13-37-05.jpg"
 		alt="" id="bg">
 	<header>
-		<button class="back" onclick="history.back()">
-			<img src="ui/images/arrow-left.svg" />
-		</button>
 
 		<a href="index.html"><img class="logotype" src="ui/images/logo-white.png" alt="logo kmska" /></a>
 		<a href="instructions.html"><img id="inf-icon" class="logotype" src="ui/images/inf-white.png" alt="info" /></a>
@@ -37,6 +34,9 @@
 		<!--<button class="menu" onclick=""><img src="ui/images/menu.svg" /></button>-->
 	</header>
 	<main>
+		<button class="back" onclick="history.back()">
+			<img src="ui/images/back.png" /><p>Back</p>
+		</button>
 			<h1><span class="light-upper">Existing</span>
 				<span class="bold-upper"> routes</span>
 			</h1>
