--- a/routeinstructions.html
+++ b/routeinstructions.html
@@ -45,7 +45,7 @@
                 <p>Go to building</p>
                 <p class="xl" id="roomnumber">1B</p>
                 <p>and room</p>
-                <p class="xl" id="paintingNumber">BC5</p>
+                <p class="xl" id="artNumber">BC5</p>
 			</section>
 			<img src="ui/images/madonna.jpg" alt="">
 			<section id="gotoinf">
