--- a/generator.html
+++ b/generator.html
@@ -48,7 +48,7 @@
 		</div>
 	</div>
 	<footer>
-		<img src="ui/images/Asset 1.svg" class="timeline"></footer>
+		<img class="timeline"></footer>
 </body>
 <script src="cordova.js"></script>
 <script src="libs/evothings/evothings.js"></script>
