--- a/routeinf.html
+++ b/routeinf.html
@@ -39,7 +39,8 @@
 		<h1><span class="light-upper">Common</span><span class="bold-upper"> route</span></h1>
 		<section id="route-inf">
 		</section>
-		<section id="route-gallery">
+			<section id="route-gallery">
+			<h2>Included paintings</h2>
 			<img src="ui/images/Kmska_Jean_Auguste_Dominique_Ingres_(1780-1867)_-_Zelfportret_(1864)_-_28-02-2010_13-37-05.jpg"
 				alt="">
 			<img src="ui/images/Kmska_Titiaan_-_Jacopo_Pesaro_bisschop_van_Paphos_voorgesteld_door_paus_Alexander_VI_Borgia_aan_de_heilige_Petrus_-_28-02-2010_13-56-55.jpg"
