Implemented starrr rating system

--- a/feedback.html
+++ b/feedback.html
@@ -38,8 +38,9 @@
         <section id="feedback">
             <div>
                 <p>Selections</p>
-                <img src="ui/images/rating-white.png" alt="">
+                <div class="starrr"></div>
                 <p>Generated</p>
+                <div class="starrr"></div>
             <a href="share.html">
                 <img src="ui/images/rating-white.png" alt="">
             </a>
@@ -49,6 +50,8 @@
     <script src="cordova.js"></script>
     <script src="libs/evothings/evothings.js"></script>
     <script src="libs/evothings/ui/ui.js"></script>
+    <link href="//netdna.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+    <script src="js/node_modules/starrr/dist/starrr.js"></script>
     <!-- TODO: Add libraries that you need -->
 
 </body>
