--- a/routeinf.html
+++ b/routeinf.html
@@ -59,6 +59,8 @@
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js"
 		integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 	<script src="js/script.js"></script>
+	<link href="//netdna.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+<script src="js/node_modules/starrr/dist/starrr.js"></script>
 	<!-- TODO: Add libraries that you need -->
 
 </body>
