Star rating fix

--- a/feedback.html
+++ b/feedback.html
@@ -55,7 +55,7 @@
     <script src="js/jquery-3.4.1.js"></script>
     <script src="js/script.js"></script>
     <link href="//netdna.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
-    <script src="js/node_modules/starrr/dist/starrr.js"></script>
+    <script src="js/starrr.js"></script>
     <!-- TODO: Add libraries that you need -->
 
 </body>
