--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 	<script src="libs/evothings/evothings.js"></script>
 	<script src="libs/evothings/ui/ui.js"></script>
 	<script src="js/script.js"></script>
-	<script src="js/node_modules/starrr/dist/starrr.js"></script>
+	<script src="js/starrr.js"></script>
 	<!-- TODO: Add libraries that you need -->
 
 </body>
