--- a/scanner.html
+++ b/scanner.html
@@ -39,28 +39,7 @@
 		<a href="instructions.html"><img id="inf-icon" class="logotype" src="ui/images/inf-white.png" alt="info" /></a>
 	</header>
 	<main>
-		<section id="guided-tours">
-			<h1><span class="light-upper">Existing</span><span class="bold-upper"> routes</span></h1>
-			<div class="carousel">
-			</div>
-		</section>
-		<section id="generate-route">
-			<h1><span class="light-upper">Generate new</span><span class="bold-upper"> route</span></h1>
-			<div id="generate-route-opt">
-				<a href="generator.html">
-					<div><img src="ui/images/user.svg">
-						<h2>Individual</h2>
-						<p>Try out the generator to create your personalized route.</p>
-					</div>
-				</a>
-				<a href="scanner.html">
-				<div><img src="ui/images/qrcode.png">
-					<h2>Group</h2>
-					<p>Scan the QR code after taking de generator test.</p>
-				</div>
-			</a>
-			</div>
-		</section>
+		
 	</main>
 	</div>
 
@@ -71,7 +50,8 @@
 	<script src="libs/evothings/evothings.js"></script>
 	<script src="libs/evothings/ui/ui.js"></script>
 	<script src="js/script.js"></script>
-	<script src="js/starrr.js"></script>
+    <script src="js/starrr.js"></script>
+    <script src="js/scanner.js"></script>
 	<!-- TODO: Add libraries that you need -->
 
 </body>
