--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
 		<a href="instructions.html"><img id="inf-icon" class="logotype" src="ui/images/inf-white.png" alt="info" /></a>
 	</header>
 	<main>
+		<p class="tablettekst"><span class="light-upper">Hi, there!<br>
+			Let me help you to create your</span><span class="bold-upper"> perfect route.</span>
+			<span class="light-upper">Generate your route </span><span class="bold-upper">individual or in group! </span></p>
 		<section id="guided-tours">
 			<h1><span class="light-upper">Existing</span><span class="bold-upper"> routes</span></h1>
 			<div class="carousel">
@@ -48,15 +51,22 @@
 			<h1><span class="light-upper">Generate new</span><span class="bold-upper"> route</span></h1>
 			<div id="generate-route-opt">
 				<a href="generator.html">
-					<div><img src="ui/images/user.svg">
+					<div id="individual">
+						<img src="ui/images/user.svg">
+						<img src="ui/images/person.png">
 						<h2>Individual</h2>
 						<p>Try out the generator to create your personalized route.</p>
 					</div>
 				</a>
-				<div><img src="ui/images/qrcode.png">
+				<a href="#">
+				<div id="group">
+						<img src="ui/images/qrcode.png">
+						<img src="ui/images/group.png">
+						</a>
 					<h2>Group</h2>
 					<p>Scan the QR code after taking de generator test.</p>
 				</div>
+			</a>
 			</div>
 		</section>
 	</main>
