--- a/feedback.html
+++ b/feedback.html
@@ -40,9 +40,9 @@
         <section id="feedback">
             <div>
                 <p>Selections</p>
-                <div class="starrr"></div>
+                <div class="selections-rating starrr"></div>
                 <p>Generated</p>
-                <div class="starrr"></div>
+                <div class="generated-rating starrr"></div>
                 <a href="share.html">
                     <img src="ui/images/rating-white.png" alt="">
                 </a>
