--- a/generator.html
+++ b/generator.html
@@ -41,7 +41,7 @@
         <h1><span class="light-upper">Route</span><span class="bold-upper"> generator</span></h1>
         <div class="question">
             <h2 id="question">Name the people in your group:</h2>
-            <input type="text" placeholder="name" class="name"> <br>
+            <input type="text" placeholder="name" class="name">	
             <button id="addPerson" class="btn">Add a person</button>
             <br>
             <button id="next" class="btn">I'm done!</button>
