Quiz loading screen

--- a/generator.html
+++ b/generator.html
@@ -27,6 +27,14 @@
 </head>
 
 <body ontouchstart="" class="white-bg">
+	<div id="loading_screen">
+		<div class="lds-ellipsis">
+			<div></div>
+			<div></div>
+			<div></div>
+			<div></div>
+		</div>
+	</div>
 	<!-- ontouchstart="" enables low-delay CSS transitions. -->
 	<header class="black-bg">
 		<a href="index.html"><img class="logotype" src="ui/images/logo-white.png" alt="logo kmska" /></a>
