--- a/timer.html
+++ b/timer.html
@@ -23,7 +23,12 @@
 </head>
 
 <body ontouchstart="">
-    <div id="demo"></div>
+    <div id="countdown">
+		<div id="countdown-number"></div>
+		<svg id="svgTimer">
+			<circle r="18" cx="20" cy="20"></circle>
+		</svg>
+	</div>
 	<!-- <script src="https://code.jquery.com/jquery-3.4.1.min.js" -->
 		<!-- integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script> -->
 		<script src="js/jquery-3.4.1.js"></script>
