Css + js route fixes

--- a/routeinstructions.html
+++ b/routeinstructions.html
@@ -35,33 +35,34 @@
 	</header>
 	<main>
 		<button class="back" onclick="history.back()">
-			<img src="ui/images/back.png" /><p>Back</p>
+			<img src="ui/images/back.png" />
+			<p>Back</p>
 		</button>
-			<h1><span class="light-upper">Existing</span>
-				<span class="bold-upper"> routes</span>
-			</h1>
-            <section id="route-instructions">
+		<section id="route-instructions">
 			<section id="goto">
-                <p>Go to building</p>
-                <p class="xl" id="roomnumber">1B</p>
-                <p>and room</p>
-                <p class="xl" id="artNumber">BC5</p>
+				<p>Go to building</p>
+				<p class="xl" id="roomnumber">1B</p>
+				<p>and room</p>
+				<p class="xl" id="artNumber">BC5</p>
 			</section>
 			<img src="ui/images/madonna.jpg" alt="">
 			<section id="gotoinf">
 				<a href="feedbackintro.html">
-				<h2>Madonna omringd door serafijnen en cherubijnen</h2>
-				<h3>Jean Fouquet</h3>
-				<p>1454 - 1456</p>
-			</a>
+					<h2>Madonna omringd door serafijnen en cherubijnen</h2>
+					<h3>Jean Fouquet</h3>
+					<p>1454 - 1456</p>
+				</a>
 			</section>
 		</section>
-	</section>
+		</section>
 	</main>
 	</div>
 	<script src="cordova.js"></script>
 	<script src="libs/evothings/evothings.js"></script>
 	<script src="libs/evothings/ui/ui.js"></script>
+	<script src="https://code.jquery.com/jquery-3.4.1.min.js"
+		integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+	<script src="js/script.js"></script>
 	<!-- TODO: Add libraries that you need -->
 
 </body>
