--- a/feedback.html
+++ b/feedback.html
@@ -39,9 +39,7 @@
         </button>
         <section id="feedback">
             <div>
-                <p>Selections</p>
-                <div class="selections-rating starrr"></div>
-                <p>Generated</p>
+                <p>Was this generated route of interest to you? Did it match your expectations of seeing the artwork that you wanted to see?</p>
                 <div class="generated-rating starrr"></div>
         </section>
     </main>
