Starrr rating complete

--- a/routeinf.html
+++ b/routeinf.html
@@ -47,11 +47,10 @@
 	<script src="cordova.js"></script>
 	<script src="libs/evothings/evothings.js"></script>
 	<script src="libs/evothings/ui/ui.js"></script>
-	<script src="https://code.jquery.com/jquery-3.4.1.min.js"
-		integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-	<script src="js/script.js"></script>
-	<link href="//netdna.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
-<script src="js/starrr.js"></script>
+	<script src="js/jquery-3.4.1.js"></script>
+    <script src="js/script.js"></script>
+    <link href="//netdna.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+    <script src="js/starrr.js"></script>
 	<!-- TODO: Add libraries that you need -->
 
 </body>
