lopen door de route

--- a/routeinstructions.html
+++ b/routeinstructions.html
@@ -40,18 +40,16 @@
 		</button>
 		<section id="route-instructions">
 			<section id="goto">
-				<p>Go to building</p>
-				<p class="xl" id="roomnumber">1B</p>
-				<p>and room</p>
-				<p class="xl" id="artNumber">BC5</p>
+				<p>Go to room</p>
+				<p class="xl" id="roomnumber">B</p>
+				<p>and painting</p>
+				<p class="xl" id="artNumber">B1</p>
 			</section>
 			<img src="ui/images/madonna.jpg" alt="">
 			<section id="gotoinf">
-				<a href="feedbackintro.html">
 					<h2>Madonna omringd door serafijnen en cherubijnen</h2>
 					<h3>Jean Fouquet</h3>
 					<p>1454 - 1456</p>
-				</a>
 			</section>
 		</section>
 		</section>
