add route numbers

--- a/route_number.html
+++ b/route_number.html
@@ -49,9 +49,7 @@
 	<script src="cordova.js"></script>
 	<script src="libs/evothings/evothings.js"></script>
 	<script src="libs/evothings/ui/ui.js"></script>
-	<script src="js/script.js"></script>
-    <script src="js/starrr.js"></script>
-    <script src="js/scanner.js"></script>
+    <script src="js/route_number.js"></script>
 	<!-- TODO: Add libraries that you need -->
 
 </body>
