--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 						<p>Try out the generator to create your personalized route.</p>
 					</div>
 				</a>
-				<a href="#">
+				<a href="route_number.html">
 				<div id="group">
 						<img src="ui/images/qrcode.png">
 						<img src="ui/images/group.png">
