--- a/route_number.html
+++ b/route_number.html
@@ -23,13 +23,6 @@
 </head>
 
 <body ontouchstart="">
-	<div id="loading_screen">
-		<div class="lds-ellipsis">
-			<div></div>
-			<div></div>
-			<div></div>
-			<div></div>
-		</div>
 	</div>
 	<!-- ontouchstart="" enables low-delay CSS transitions. -->
 	<img src="ui/images/Kmska_Jean_Auguste_Dominique_Ingres_(1780-1867)_-_Zelfportret_(1864)_-_28-02-2010_13-37-05.jpg"
@@ -40,6 +33,8 @@
 	</header>
 	<main>
 		
+		<input type="text" id="code" placeholder="code">
+		<button class="btn" id="selectCode">Select route</button>
 	</main>
 	</div>
 
