--- a/route_number.html
+++ b/route_number.html
@@ -32,7 +32,7 @@
 	<main class="entercode">
 		<h1><span>Enter your code</span></h1>
 		<input type="text" id="code" placeholder="0000">
-		<button class="btn" id="selectCode">Select route</button>
+		<button class="btn" id="selectCode">Start route</button>
 	</main>
 	</div>
 
