--- a/feedback.html
+++ b/feedback.html
@@ -39,7 +39,7 @@
         </button>
         <section id="feedback">
             <div>
-                <p>Did you like this app?</p>
+                <p>Did you like this route?</p>
                 <div class="generated-rating starrr"></div>
         </section>
     </main>
