names only with group quiz

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 		<section id="generate-route">
 			<h1><span class="light-upper">Generate new</span><span class="bold-upper"> route</span></h1>
 			<div id="generate-route-opt">
-				<a href="generator.html">
+				<a href="generator.html" id="individual">
 					<div id="individual">
 						<img src="ui/images/user.svg">
 						<img src="ui/images/person.png">
@@ -56,7 +56,7 @@
 					</div>
 				</a>
 				
-				<a href="route_number.html" id="codeBtn">
+				<a href="route_number.html" id="codeBtn" class="group">
 				<div id="group">
 					
 						<img id="qr" src="ui/images/qrcode.png">
